WCMS-20620: Fix swagger horizontal overflow on mobile

--- a/src/templates/APIPage/swagger-ui-overrides.scss
+++ b/src/templates/APIPage/swagger-ui-overrides.scss
@@ -100,6 +100,10 @@ This document provides overrides to Swagger UI, fixing accessibility issues.
       min-width: 174px;
     }
   }
+
+  .table-container, .responses-inner {
+    overflow: scroll;
+  }
 }
 
 .swagger-ui h2, .swagger-ui h3, .swagger-ui h4 {
